3/6 spawners should be done