@@ -4,19 +4,19 @@ import ca.landonjw.gooeylibs2.api.UIManager;
 import ca.landonjw.gooeylibs2.api.button.GooeyButton;
 import ca.landonjw.gooeylibs2.api.page.GooeyPage;
 import ca.landonjw.gooeylibs2.api.template.types.ChestTemplate;
-import com.google.common.reflect.TypeToken;
 import com.lypaka.areamanager.Areas.Area;
 import com.lypaka.areamanager.Areas.AreaHandler;
-import com.lypaka.lypakautils.FancyText;
-import com.lypaka.lypakautils.MiscHandlers.ItemStackBuilder;
+import com.lypaka.lypakautils.Handlers.FancyTextHandler;
+import com.lypaka.lypakautils.Handlers.ItemStackHandler;
+import com.lypaka.shadow.configurate.objectmapping.ObjectMappingException;
+import com.lypaka.shadow.google.common.reflect.TypeToken;
 import com.lypaka.spawnmanager.ConfigGetters;
 import com.lypaka.spawnmanager.SpawnManager;
-import net.minecraft.entity.player.ServerPlayerEntity;
+import net.minecraft.component.DataComponentTypes;
+import net.minecraft.component.type.LoreComponent;
 import net.minecraft.item.ItemStack;
-import net.minecraft.nbt.ListNBT;
-import net.minecraft.nbt.StringNBT;
-import net.minecraft.util.text.ITextComponent;
-import ninja.leaping.configurate.objectmapping.ObjectMappingException;
+import net.minecraft.server.network.ServerPlayerEntity;
+import net.minecraft.text.Text;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -26,18 +26,18 @@ public class MainMenu {
 
     public static void open (ServerPlayerEntity player) throws ObjectMappingException {
 
-        int x = player.getPosition().getX();
-        int y = player.getPosition().getY();
-        int z = player.getPosition().getZ();
-        ArrayList<Area> areas = new ArrayList<>(AreaHandler.getSortedAreas(x, y, z, player.world));
+        int x = player.getBlockPos().getX();
+        int y = player.getBlockPos().getY();
+        int z = player.getBlockPos().getZ();
+        ArrayList<Area> areas = new ArrayList<>(AreaHandler.getSortedAreas(x, y, z, player.getWorld()));
         List<Area> allAreasNoModifications = new ArrayList<>(areas);
-        if (areas.size() == 0) {
+        if (areas.isEmpty()) {
 
-            player.sendMessage(FancyText.getFormattedText("&eNot currently in any Areas!"), player.getUniqueID());
+            player.sendMessage(FancyTextHandler.getFormattedText("&eNot currently in any Areas!"));
             return;
 
         }
-        Area currentArea = areas.get(0);
+        Area currentArea = areas.getFirst();
         areas.removeIf(a -> a.getName().equalsIgnoreCase(currentArea.getName()));
 
         int rows = ConfigGetters.mainMenuRows;
@@ -45,7 +45,7 @@ public class MainMenu {
         ChestTemplate template = ChestTemplate.builder(rows).build();
         GooeyPage page = GooeyPage.builder()
                 .template(template)
-                .title(FancyText.getFormattedString(title))
+                .title(FancyTextHandler.getFormattedString(title))
                 .build();
 
         Map<String, String> borderStuff = ConfigGetters.mainMenuSlotsMap.get("Border");
@@ -64,16 +64,16 @@ public class MainMenu {
                 int slot = Integer.parseInt(entry.getKey().replace("Slot-", ""));
                 Map<String, String> data = entry.getValue();
                 String displayID = data.get("ID");
-                ItemStack displayStack = ItemStackBuilder.buildFromStringID(displayID);
+                ItemStack displayStack = ItemStackHandler.buildFromStringID(displayID);
                 if (data.containsKey("Display-Name")) {
 
-                    displayStack.setDisplayName(FancyText.getFormattedText(data.get("Display-Name")));
+                    displayStack.set(DataComponentTypes.CUSTOM_NAME, FancyTextHandler.getFormattedText(data.get("Display-Name")));
 
                 }
                 if (data.containsKey("Lore")) {
 
-                    List<String> displayLore = SpawnManager.configManager.getConfigNode(2, "Main-Menu", "Slots", entry.getKey(), "Lore").getList(TypeToken.of(String.class));
-                    ListNBT lore = new ListNBT();
+                    List<String> displayLore = SpawnManager.configManager.getConfigNode(1, "Main-Menu", "Slots", entry.getKey(), "Lore").getList(TypeToken.of(String.class));
+                    List<Text> lore = new ArrayList<>();
                     List<String> subAreas = new ArrayList<>();
                     for (Area a : areas) {
 
@@ -83,14 +83,14 @@ public class MainMenu {
 
                     for (String l : displayLore) {
 
-                        lore.add(StringNBT.valueOf(ITextComponent.Serializer.toJson(FancyText.getFormattedText(l
+                        lore.add(FancyTextHandler.getFormattedText(l
                                 .replace("%currentArea%", currentArea.getDisplayName())
                                 .replace("%subAreas%", String.join("\n", subAreas))
-                        ))));
+                        ));
 
                     }
 
-                    displayStack.getOrCreateChildTag("display").put("Lore", lore);
+                    displayStack.set(DataComponentTypes.LORE, new LoreComponent(lore));
 
                 }
 
